Build basic websocket configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
-    if(NOT DEFINED WITH_IN_SOURCE_BUILD)
+if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+    if (NOT DEFINED WITH_IN_SOURCE_BUILD)
         message(FATAL_ERROR
                 "CMake generation for indiemotion is not allowed within the source directory!"
                 "\n Remove \"${CMAKE_SOURCE_DIR}/CMakeCache.txt\" and try again from another folder, e.g.:"
@@ -11,18 +11,18 @@ if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
                 "\n cmake .."
                 "\n "
                 )
-    endif()
-endif()
+    endif ()
+endif ()
 
 project(
-    "indiemotion"
-    VERSION 0.1.0
-    LANGUAGES C CXX
+        "indiemotion"
+        VERSION 0.1.0
+        LANGUAGES C CXX
 )
 # -----------------------------------------------------------------------------
 # Build Options
 # -----------------------------------------------------------------------------
-set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Select C++17 as the standard for C++ projects.
 set(CMAKE_CXX_STANDARD 17)
 # If C++17 is not available, downgrading to an earlier standard is NOT OK.
@@ -60,7 +60,17 @@ include(CopyDllsForDebug)
 add_subdirectory(vendor)
 find_package(Boost 1.76.0 REQUIRED python program_options)
 
-add_library(indiemotion include/indiemotion/server.hpp src/server/server.cpp include/indiemotion/impl/server_runtime.hpp include/beast.hpp include/net.hpp src/server/server_runtime.cpp src/server/http_session.cpp src/server/http_session.hpp)
+add_library(indiemotion
+        include/indiemotion/server.hpp
+        src/server/server.cpp
+        include/indiemotion/impl/server_runtime.hpp
+        include/beast.hpp include/net.hpp
+        src/server/server_runtime.cpp
+        src/server/http_session.cpp
+        src/server/http_session.hpp
+        src/server/websocket.cpp
+        src/server/websocket.hpp
+        )
 add_library(indiemotion::indiemotion ALIAS indiemotion)
 set_target_properties(indiemotion PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(indiemotion PROPERTIES
@@ -71,17 +81,19 @@ set_target_properties(indiemotion PROPERTIES
 target_compile_features(indiemotion PUBLIC cxx_std_17)
 target_include_directories(indiemotion
         PUBLIC $<INSTALL_INTERFACE:${indiemotion_INSTALL_INCLUDEDIR}> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-)
+        )
 target_link_libraries(indiemotion
         PUBLIC
         general
         Boost::boost
         spdlog::spdlog
         fmt::fmt
-)
+        )
 
 add_executable(imserver src/imserver/main.cpp)
 target_link_libraries(imserver
         PUBLIC
         indiemotion
-)
+        fmt::fmt
+        )
+target_compile_features(imserver PUBLIC cxx_std_17)
